<resources>
    <string name="app_name">Project1</string>
    <string name="presidential_school">Presidential School</string>
    <string name="of">of</string>
    <string name="etiquette">Etiquette</string>
    <string name="www_grabthat_com">www.grabthat.com</string>
    <string name="_08_80085_90557">08 80085 90557</string>
    <string name="coming_to_a_golf_course_near_you">Coming to a golf course near you!</string>
</resources>
